# GoogleHackthon-CityPulse

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
citypulse/: agent.py  main.py
citypulse-ui/: .dockerignore  Dockerfile  README.md  angular.json  package-lock.json  package.json
citypulse-ui/src/: index.html  main.ts
citypulse-ui/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
citypulse-ui/src/app/core/models/: dashboard.model.ts  trend.model.ts
citypulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
citypulse/agents/: analytics_agent.py  generator_agent.py  recommendation_agent.py  triage_agent.py
citypulse/api/: chat.py  dashboard.py  main.py
citypulse/cloud/: bigquery.py  forecast.py  uploader.py
citypulse/core/: config.py
citypulse/database/: connection.py  dashboard_repository.py  init_db.py  repository.py
citypulse/graders/: schemas.py  triage_grader.py
citypulse/orchestrator/: __init__.py  root_agent.py
citypulse/schemas/: analytics.py  complaint.py  dashboard.py  forecast.py  recommendation.py
citypulse/services/: chat_service.py  dashboard_service.py  triage_service.py
citypulse/tools/: analytics_tool.py  forecast_tool.py  recommendation_tool.py  triage_tool.py
citypulse/utils/: date_generator.py
scripts/: generate_dataset.py
tests/: test_analytics_agent.py  test_bigquery.py  test_dataset_stats.py  test_forecast.py  test_forecast_result.py  test_grader.py  test_query.py  test_recommendation.py  test_repository.py  test_repository_read.py  test_upload.py
(+32 files in other folders)
