[project]
name = "citypulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi>=0.139.0",
    "google-adk>=2.3.0",
    "google-cloud-bigquery>=3.42.1",
    "google-genai>=2.10.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-pythonpath>=0.7.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
